force-app/main/default/objects/Linea_de_Proyecto__c/Linea_de_Proyecto__c.object-meta.xml
<CustomObject>
    <label>Línea de Proyecto</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Número de Línea de Proyecto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de Proyecto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>