force-app/main/default/objects/Linea_de_Proyecto__c/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <formula>Oportunidad__r.Owner.FirstName +&apos; &apos; + Oportunidad__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountManager</label>
    <type>Text</type>
</CustomField>