force-app/main/default/objects/Linea_de_Proyecto__c/fields/Agile__c.field-meta.xml
<CustomField>
    <fullName>Agile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agile</label>
    <type>Checkbox</type>
</CustomField>