force-app/main/default/objects/Linea_de_Proyecto__c/fields/Agrupacion_Tipo_Registro__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_Tipo_Registro__c</fullName>
    <formula>if(AND(OR(RecordType.DeveloperName==&apos;Licencias&apos;,RecordType.DeveloperName==&apos;Licencias_Renovaci_n&apos;,RecordType.DeveloperName==&apos;Licencias_Servicios&apos;)) ,&apos;Licencias&apos;,&apos;Servicios&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupacion Tipo Proyecto</label>
    <type>Text</type>
</CustomField>