force-app/main/default/objects/Linea_de_Proyecto__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Práctica</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gerencia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Areas</valueSetName>
    </valueSet>
</CustomField>