force-app/main/default/objects/Linea_de_Proyecto__c/fields/Area_Corta__c.field-meta.xml
<CustomField>
    <fullName>Area_Corta__c</fullName>
    <formula>Area_Corta_Flow__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area_Corta</label>
    <type>Text</type>
</CustomField>