force-app/main/default/objects/Linea_de_Proyecto__c/fields/Area_Corta_Flow__c.field-meta.xml
<CustomField>
    <fullName>Area_Corta_Flow__c</fullName>
    <label>Area Corta Flow</label>
    <length>50</length>
    <type>Text</type>
</CustomField>