force-app/main/default/objects/Linea_de_Proyecto__c/fields/Bench_Request__c.field-meta.xml
<CustomField>
    <fullName>Bench_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bench Request</label>
    <type>Checkbox</type>
</CustomField>