force-app/main/default/objects/Linea_de_Proyecto__c/fields/Beneficio_bruto__c.field-meta.xml
<CustomField>
    <fullName>Beneficio_bruto__c</fullName>
    <formula>if( Precio_Venta__c &gt;0,Precio_Venta__c- Coste_real__c ,Importe_total_2__c - Coste_estimado__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>