force-app/main/default/objects/Linea_de_Proyecto__c/fields/Beneficio_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Beneficio_Intercompany__c</fullName>
    <formula>Importe_Total_Intercompany__c -  Coste_Estimado_Intercompany__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>