force-app/main/default/objects/Linea_de_Proyecto__c/fields/Beneficio_licencias__c.field-meta.xml
<CustomField>
    <fullName>Beneficio_licencias__c</fullName>
    <label>Beneficio licencias</label>
    <summarizedField>Licencia__c.Beneficio__c</summarizedField>
    <summaryFilterItems>
        <field>Licencia__c.Activa__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Licencia__c.Linea_de_Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>