force-app/main/default/objects/Linea_de_Proyecto__c/fields/Beneficio_real__c.field-meta.xml
<CustomField>
    <fullName>Beneficio_real__c</fullName>
    <formula>Precio_Venta__c- Coste_Bruto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>