force-app/main/default/objects/Linea_de_Proyecto__c/fields/Beneficio_real_a_elevar__c.field-meta.xml
<CustomField>
    <fullName>Beneficio_real_a_elevar__c</fullName>
    <formula>Beneficio_real__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio real a elevar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>