force-app/main/default/objects/Linea_de_Proyecto__c/fields/Cambio_Alcance__c.field-meta.xml
<CustomField>
    <fullName>Cambio_Alcance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Alcance</label>
    <type>Checkbox</type>
</CustomField>