force-app/main/default/objects/Linea_de_Proyecto__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>