force-app/main/default/objects/Linea_de_Proyecto__c/fields/Clase_PEP__c.field-meta.xml
<CustomField>
    <fullName>Clase_PEP__c</fullName>
    <formula>if(RecordType.DeveloperName==&apos;Llave_en_Mano&apos;,&apos;ZA&apos;,
if(text(Tipo_de_ingreso__c)==&apos;Por producción&apos;,&apos;ZM&apos;,
if(text(Tipo_de_ingreso__c)==&apos;Fijo mensual&apos;,&apos;ZB&apos;,
if(RecordType.DeveloperName==&apos;Guardias&apos;,&apos;ZN&apos;,
if(RecordType.DeveloperName==&apos;Hosting&apos;,&apos;ZK&apos;,
if(RecordType.DeveloperName==&apos;Licencias&apos;,&apos;ZG&apos;,
if(RecordType.DeveloperName==&apos;Licencias_Renovaci_n&apos;,&apos;ZG&apos;,
if(RecordType.DeveloperName==&apos;Licencias_Servicios&apos;,&apos;ZG&apos;,
if(RecordType.DeveloperName==&apos;TM&apos;,&apos;ZC&apos;,&apos;NONE&apos;


)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clase PEP</label>
    <type>Text</type>
</CustomField>