force-app/main/default/objects/Linea_de_Proyecto__c/fields/Clave_de_Periodificacion__c.field-meta.xml
<CustomField>
    <fullName>Clave_de_Periodificacion__c</fullName>
    <label>Clave de Periodificación</label>
    <length>6</length>
    <type>Text</type>
</CustomField>