force-app/main/default/objects/Linea_de_Proyecto__c/fields/Clave_Periodificacion__c.field-meta.xml
<CustomField>
    <fullName>Clave_Periodificacion__c</fullName>
    <formula>CASE(  RecordType.Name  , 
&apos;Licencias&apos;, &apos;ZLCWIP&apos;, 
&apos;Llave en Mano&apos;, &apos;ZLLWIP&apos;, 
&apos;Hosting&apos;, &apos;ZLCWIP&apos;, 
&apos;T&amp;M&apos;, &apos;ZTMWIP&apos;, 
&apos;Licencias - Renovación&apos;, &apos;ZLCWIP&apos;, 
&apos;Licencias - Servicios&apos;,&apos;ZLCWIP&apos;, 
&apos;AM&apos;, if(  ISPICKVAL(Tipo_de_ingreso__c , &apos;Por producción&apos;), &apos;ZVAWIP&apos;,&apos;ZFIJOS&apos;),
&apos;Guardias&apos;,&apos;ZVAWIP&apos;, 
&apos;Servicio Variable&apos;,&apos;ZVAWIP&apos;, &apos;&apos;
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave Periodificación</label>
    <type>Text</type>
</CustomField>