force-app/main/default/objects/Linea_de_Proyecto__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <formula>Text(Oportunidad__r.Cluster__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster</label>
    <type>Text</type>
</CustomField>