force-app/main/default/objects/Linea_de_Proyecto__c/fields/Codigo_Interco__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Interco__c</fullName>
    <label>Codigo Interco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>