force-app/main/default/objects/Linea_de_Proyecto__c/fields/Codigo_SAP_Ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP_Ejecucion__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP Ejecución</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>