force-app/main/default/objects/Linea_de_Proyecto__c/fields/Codigo_SAP_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP_Preventa__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP Preventa</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>