force-app/main/default/objects/Linea_de_Proyecto__c/fields/CodigoPepInterco__c.field-meta.xml
<CustomField>
    <fullName>CodigoPepInterco__c</fullName>
    <formula>if(Codigo_Interco__c !=null,Codigo_Interco__c ,  PEP_Interco__r.Codigo_SAP_Ejecucion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CodigoPepInterco</label>
    <type>Text</type>
</CustomField>