force-app/main/default/objects/Linea_de_Proyecto__c/fields/Comercial_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Comercial_Intercompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Comercial de la filial.</description>
    <label>Comercial Intercompany</label>
    <referenceTo>User</referenceTo>
    <relationshipName>L_neas_de_Proyecto2</relationshipName>
    <type>Lookup</type>
</CustomField>