force-app/main/default/objects/Linea_de_Proyecto__c/fields/Comprobacion_Fecha__c.field-meta.xml
<CustomField>
    <fullName>Comprobacion_Fecha__c</fullName>
    <formula>Fecha_Fin__c &gt;= Fecha_Inicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comprobacion Fecha</label>
    <type>Checkbox</type>
</CustomField>