force-app/main/default/objects/Linea_de_Proyecto__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el responsable de Software puede o no contactar directamente con el cliente</description>
    <inlineHelpText>Shows if the software responsible can contact directly with the client</inlineHelpText>
    <label>Contacto</label>
    <type>Checkbox</type>
</CustomField>