force-app/main/default/objects/Linea_de_Proyecto__c/fields/Contador_Licencias_validadas__c.field-meta.xml
<CustomField>
    <fullName>Contador_Licencias_validadas__c</fullName>
    <inlineHelpText>Shows the amount of active licenses valid to change to &quot;Presented&quot; stage and for their syncronizaction with SAP</inlineHelpText>
    <label>Contador Licencias validadas</label>
    <summaryFilterItems>
        <field>Licencia__c.Activa__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Licencia__c.Datos_validados__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Licencia__c.Linea_de_Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>