force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_a_Elevar__c.field-meta.xml
<CustomField>
    <fullName>Coste_a_Elevar__c</fullName>
    <formula>if(  Intercompany__c =true,Coste_Estimado_Intercompany__c ,Coste_real__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste a Elevar Servicios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>