force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_a_Elevar_Licencias__c.field-meta.xml
<CustomField>
    <fullName>Coste_a_Elevar_Licencias__c</fullName>
    <formula>Coste_total_licencias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste a Elevar Licencias</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>