force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Coste_Bruto__c</fullName>
    <label>Total Coste Bruto</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>