force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_estimado__c.field-meta.xml
<CustomField>
    <fullName>Coste_estimado__c</fullName>
    <label>Coste estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>