force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_Estimado_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Coste_Estimado_Intercompany__c</fullName>
    <formula>if(Importe_de_licencias__c&gt;0,Importe_de_licencias__c,Importe_total_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Estimado Intercompany</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>