force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_Gasto__c.field-meta.xml
<CustomField>
    <fullName>Coste_Gasto__c</fullName>
    <label>Coste Gasto</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>