force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_real__c.field-meta.xml
<CustomField>
    <fullName>Coste_real__c</fullName>
    <formula>Coste_estimado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>