force-app/main/default/objects/Linea_de_Proyecto__c/fields/Coste_total_licencias__c.field-meta.xml
<CustomField>
    <fullName>Coste_total_licencias__c</fullName>
    <label>Coste Total Licencias</label>
    <summarizedField>Licencia__c.Coste_a_elevar__c</summarizedField>
    <summaryForeignKey>Licencia__c.Linea_de_Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>