force-app/main/default/objects/Linea_de_Proyecto__c/fields/CosteLBE__c.field-meta.xml
<CustomField>
    <fullName>CosteLBE__c</fullName>
    <label>CosteLBE</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>