force-app/main/default/objects/Linea_de_Proyecto__c/fields/CY_Forcecast__c.field-meta.xml
<CustomField>
    <fullName>CY_Forcecast__c</fullName>
    <formula>IF(
    AND(
        YEAR(Fecha_Fin__c) = 2024,
        YEAR(Fecha_Inicio__c) = 2024
    ),
    Importe_a_elevar__c,
    (Importe_a_elevar__c / (Fecha_Fin__c - Fecha_Inicio__c)) * (DATE(2024, 12, 31) - Fecha_Inicio__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Forcecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>