force-app/main/default/objects/Linea_de_Proyecto__c/fields/Direccion_cliente__c.field-meta.xml
<CustomField>
    <fullName>Direccion_cliente__c</fullName>
    <label>Direccion cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>