force-app/main/default/objects/Linea_de_Proyecto__c/fields/Duracion_de_linea__c.field-meta.xml
<CustomField>
    <fullName>Duracion_de_linea__c</fullName>
    <formula>Fecha_Fin__c - Fecha_Inicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración de línea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>