force-app/main/default/objects/Linea_de_Proyecto__c/fields/Duracion_lineas_por_meses__c.field-meta.xml
<CustomField>
    <fullName>Duracion_lineas_por_meses__c</fullName>
    <formula>IF( 
(Fecha_Fin__c - Fecha_Inicio__c) / 365 * 12 &lt; 1, 1, (Fecha_Fin__c - Fecha_Inicio__c ) / 365 * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duración lineas por meses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>