force-app/main/default/objects/Linea_de_Proyecto__c/fields/Ejecutado_en_cliente__c.field-meta.xml
<CustomField>
    <fullName>Ejecutado_en_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ejecutado en cliente</label>
    <type>Checkbox</type>
</CustomField>