force-app/main/default/objects/Linea_de_Proyecto__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Proficiency</fullName>
            </value>
            <value>
                <fullName>Elementary Proficiency</fullName>
            </value>
            <value>
                <fullName>Limited Working Proficiency</fullName>
            </value>
            <value>
                <fullName>Professional Working Proficiency</fullName>
            </value>
            <value>
                <fullName>Full Professional Proficiency</fullName>
            </value>
            <value>
                <fullName>Native or Bilingual Proficiency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>