force-app/main/default/objects/Linea_de_Proyecto__c/fields/Estimated_date_of_incorporation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_date_of_incorporation__c</fullName>
    <label>Estimated date of incorporation</label>
    <type>Date</type>
</CustomField>