force-app/main/default/objects/Linea_de_Proyecto__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <formula>TEXT(Oportunidad__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etapa</label>
    <type>Text</type>
</CustomField>