force-app/main/default/objects/Linea_de_Proyecto__c/fields/Execution_SAP_Name__c.field-meta.xml
<CustomField>
    <fullName>Execution_SAP_Name__c</fullName>
    <label>Execution SAP Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>