force-app/main/default/objects/Linea_de_Proyecto__c/fields/Facturado_a_elevar__c.field-meta.xml
<CustomField>
    <fullName>Facturado_a_elevar__c</fullName>
    <formula>Importe_facturado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facturado a elevar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>