force-app/main/default/objects/Linea_de_Proyecto__c/fields/Fecha_Activacion_Licencias__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Activacion_Licencias__c</fullName>
    <label>Fecha Activacion Licencias</label>
    <summarizedField>Licencia__c.Fecha_de_activacion__c</summarizedField>
    <summaryForeignKey>Licencia__c.Linea_de_Proyecto__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>