force-app/main/default/objects/Linea_de_Proyecto__c/fields/Fecha_Cierre_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cierre_Oportunidad__c</fullName>
    <formula>Oportunidad__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Cierre Oportunidad</label>
    <type>Date</type>
</CustomField>