force-app/main/default/objects/Linea_de_Proyecto__c/fields/Fecha_de_facturacion_3__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_facturacion_3__c</fullName>
    <label>Fecha de facturación 3</label>
    <type>Date</type>
</CustomField>