force-app/main/default/objects/Linea_de_Proyecto__c/fields/Filtro_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Filtro_Intercompany__c</fullName>
    <formula>TEXT(Sede__c)!= TEXT(Oportunidad__r.Sede_Venta__r.Sede__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filtro Intercompany</label>
    <type>Checkbox</type>
</CustomField>