force-app/main/default/objects/Linea_de_Proyecto__c/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sede__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Gerencias</valueSetName>
    </valueSet>
</CustomField>