force-app/main/default/objects/Linea_de_Proyecto__c/fields/GPMID__c.field-meta.xml
<CustomField>
    <fullName>GPMID__c</fullName>
    <formula>Oportunidad__r.GPM__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPMID</label>
    <type>Text</type>
</CustomField>