force-app/main/default/objects/Linea_de_Proyecto__c/fields/Hiring_Info__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Info__c</fullName>
    <formula>OR(Not(isblank(Rate__c)),Not(isblank(Estimated_date_of_incorporation__c )),Not(isblank(n_vacantes__c )))</formula>
    <label>Hiring Info</label>
    <type>Checkbox</type>
</CustomField>