force-app/main/default/objects/Linea_de_Proyecto__c/fields/Hiring_URL_petition__c.field-meta.xml
<CustomField>
    <fullName>Hiring_URL_petition__c</fullName>
    <label>Hiring URL petition</label>
    <type>Url</type>
</CustomField>