force-app/main/default/objects/Linea_de_Proyecto__c/fields/Hito_1__c.field-meta.xml
<CustomField>
    <fullName>Hito_1__c</fullName>
    <defaultValue>&quot;Fin de proyecto&quot;</defaultValue>
    <label>Hito 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>