force-app/main/default/objects/Linea_de_Proyecto__c/fields/Id_PepEspejo__c.field-meta.xml
<CustomField>
    <fullName>Id_PepEspejo__c</fullName>
    <label>Id_PepEspejo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>