force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_a_elevar__c.field-meta.xml
<CustomField>
    <fullName>Importe_a_elevar__c</fullName>
    <formula>if(AND( Precio_Venta__c &gt;1 &amp;&amp;Intercompany__c==false &amp;&amp;Importe_de_licencias__c==0 )  ,Precio_Venta__c + Importe_de_licencias__c,
if(Intercompany__c==true, Importe_Total_Intercompany__c ,
if(Importe_de_licencias__c&gt;0,Importe_de_licencias__c,Importe_total_2__c + Importe_de_licencias__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe a elevar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>