force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_a_facturar_1__c.field-meta.xml
<CustomField>
    <fullName>Importe_a_facturar_1__c</fullName>
    <label>Importe a facturar 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>