force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_Agrupado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Agrupado__c</fullName>
    <formula>if( AND(Agrupacion_Tipo_Registro__c ==&apos;Licencias&apos; ,EsIntercompany__c ==false),Importe_de_licencias__c ,

if( AND(Agrupacion_Tipo_Registro__c ==&apos;Servicios&apos; ,EsIntercompany__c ==false) ,Importe_total_2__c  , 
if(  EsIntercompany__c ==true, Importe_Total_Intercompany__c ,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe  Agrupado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>