force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_de_licencias__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_licencias__c</fullName>
    <label>Importe de licencias</label>
    <summarizedField>Licencia__c.Importe_a_elevar__c</summarizedField>
    <summaryForeignKey>Licencia__c.Linea_de_Proyecto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>