force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_facturado__c.field-meta.xml
<CustomField>
    <fullName>Importe_facturado__c</fullName>
    <label>Importe facturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>