force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_formula__c.field-meta.xml
<CustomField>
    <fullName>Importe_formula__c</fullName>
    <formula>text(ROUND( Importe_a_elevar__c ,2) ) +&apos; &apos; + text(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe</label>
    <type>Text</type>
</CustomField>