force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_prorrateado_x_prob__c.field-meta.xml
<CustomField>
    <fullName>Importe_prorrateado_x_prob__c</fullName>
    <formula>Importe_x_Prob__c / Duracion_de_linea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe prorrateado x prob</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>