force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_Serbatic__c.field-meta.xml
<CustomField>
    <fullName>Importe_Serbatic__c</fullName>
    <formula>if( ISPICKVAL(Sede__c  , &apos;1210&apos;), Importe_total_2__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Serbatic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>