force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_total_2__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_2__c</fullName>
    <description>Nuevo campo para poder indicar de forma manual el importe final</description>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>