force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <formula>(Coste_estimado__c / (1 - Margen_bruto__c)) + Importe_de_licencias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>