force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_Total_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Importe_Total_Intercompany__c</fullName>
    <formula>(Coste_Estimado_Intercompany__c/(1- Margen_Intercompany__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Total Intercompany</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>