force-app/main/default/objects/Linea_de_Proyecto__c/fields/Importe_x_Prob__c.field-meta.xml
<CustomField>
    <fullName>Importe_x_Prob__c</fullName>
    <formula>Importe_a_elevar__c *  Oportunidad__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe x Prob</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>